<resources>
    <string name="app_name">Personal Article</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_help">Help</string>
    <string name="action_delete">Delete</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_edit">Add Article</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_articles">My Articles</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_writer_location">Writer Location</string>
    <string name="find_location_details_save"><![CDATA[Find Location Details & Save]]></string>
    <string name="delete_account">Delete Account</string>
    <string name="find_current_location">Find Current Location</string>
    <string name="my_articles">My Articles</string>
</resources>